@@ -1,12 +1,12 @@
 # Music Weather Recommender
 
-Sistema que recomienda música en función del tiempo meteorológico actual. Combina datos de canciones populares de Last.fm con datos meteorológicos en tiempo real de OpenWeatherMap para sugerir listas de reproducción adaptadas al estado de ánimo que provoca el clima.
+Sistema que recomienda música en función del tiempo meteorológico actual y la reproduce directamente en Spotify. Combina datos de canciones populares de Last.fm con datos meteorológicos en tiempo real de OpenWeatherMap para sugerir listas de reproducción adaptadas al estado de ánimo que provoca el clima.
 
 ---
 
 ## Propuesta de valor
 
-El usuario selecciona una condición meteorológica (o deja que el sistema detecte el tiempo real de su ciudad) y recibe al instante un ranking de canciones cuyo género y etiquetas encajan con el estado de ánimo asociado a ese clima. La correspondencia clima → ánimo → música se basa en el modelo circunflejo de Russell (cuadrantes Q1–Q4), ampliamente usado en investigación de Music Emotion Recognition.
+El usuario abre la interfaz web, conecta su cuenta de Spotify Premium y recibe al instante un ranking de canciones cuyo género y etiquetas encajan con el estado de ánimo asociado al clima de su ciudad. Con un solo clic, la canción seleccionada comienza a sonar en su dispositivo Spotify activo. La correspondencia clima → ánimo → música se basa en el modelo circunflejo de Russell (cuadrantes Q1–Q4), ampliamente usado en investigación de Music Emotion Recognition.
 
 | Clima | Ánimo (cuadrante) | Géneros típicos |
 |---|---|---|
@@ -19,37 +19,47 @@ El usuario selecciona una condición meteorológica (o deja que el sistema detec
 
 ## Arquitectura del sistema
 
-El sistema sigue una arquitectura **Lambda/Kappa**: los datos fluyen desde los feeders hacia un event store persistente y simultáneamente a través de un broker de mensajería, permitiendo que la business-unit reconstruya su estado histórico al arrancar y reciba actualizaciones en tiempo real.
+El sistema sigue una arquitectura **Lambda/Kappa**: los datos fluyen desde los feeders hacia un event store persistente y simultáneamente a través de un broker de mensajería, permitiendo que la business-unit reconstruya su estado histórico al arrancar y reciba actualizaciones en tiempo real. La capa de presentación es una interfaz web servida por Javalin que conecta con Spotify para reproducción inmediata.
 
-```
-┌─────────────────┐        ┌──────────────────┐
-│  lastfm-feeder  │──JMS──▶│                  │──▶ eventstore/Track/
-│  (Java)         │        │ event-store-      │
-└─────────────────┘        │ builder (Java)    │
-                           │                  │──▶ eventstore/Weather/
-┌─────────────────┐        │                  │
-│ weather-feeder  │─STOMP─▶│                  │
-│  (Python)       │        └──────────────────┘
-└─────────────────┘
-        │                         ActiveMQ Broker
-        │                    ┌────────────────────┐
-        └────────STOMP───────▶   topic: Weather   │
-┌─────────────────┐          │   topic: Track     │
-│  lastfm-feeder  │────JMS──▶│                    │
-└─────────────────┘          └────────────────────┘
-                                        │ JMS
-                                        ▼
-                             ┌──────────────────────┐
-                             │   business-unit       │
-                             │   (Java)              │
-                             │                       │
-                             │  EventStoreReader     │
-                             │  ──────────────────   │
-                             │  TrackDatamart (SQLite)│
-                             │  WeatherState         │
-                             │  TrackRecommender     │
-                             │  CLI                  │
-                             └──────────────────────┘
+```mermaid
+graph TD
+    subgraph "Productores"
+        WF[weather-feeder\nPython]
+        LF[lastfm-feeder\nJava]
+    end
+
+    subgraph "Middleware EAI — ActiveMQ"
+        B[ActiveMQ Broker\nport 61616 / 61613]
+    end
+
+    subgraph "Batch Layer — Data Lake"
+        ESB[event-store-builder]
+        ES[(eventstore\nNDJSON)]
+    end
+
+    subgraph "Speed & Serving Layer"
+        BU[business-unit Java\nJavalin :8080]
+        BUP[business-unit Python\nWeatherDatamart + CLI]
+    end
+
+    subgraph "Servicios externos"
+        SP[Spotify API]
+    end
+
+    subgraph "Usuario"
+        BR[Navegador web\n:8080]
+    end
+
+    WF -->|STOMP /topic/Weather| B
+    LF -->|JMS topic/Track| B
+    B -->|Durable Sub| ESB
+    ESB -->|Append| ES
+    B -->|JMS subscribe| BU
+    B -->|STOMP subscribe| BUP
+    ES -->|EventStoreReader| BU
+    ES -->|EventStoreReader| BUP
+    BR -->|HTTP REST| BU
+    BU -->|OAuth2 + REST| SP
 ```
 
 ### Flujo de datos
@@ -57,7 +67,8 @@ El sistema sigue una arquitectura **Lambda/Kappa**: los datos fluyen desde los f
 1. **lastfm-feeder** consulta la API de Last.fm cada 6 horas y publica eventos `Track` (JSON) al topic `Track` de ActiveMQ.
 2. **weather-feeder** consulta OpenWeatherMap cada hora y publica eventos `Weather` (JSON) al topic `Weather` vía STOMP.
 3. **event-store-builder** está suscrito a ambos topics y persiste cada evento en ficheros NDJSON organizados por `topic/ss/fecha.events`.
-4. **business-unit** al arrancar lee el event store completo para reconstruir el datamart SQLite y el estado de meteorología. Luego se suscribe en vivo a ambos topics para mantener los datos actualizados. El usuario interactúa a través de la CLI.
+4. **business-unit** al arrancar lee el event store completo para reconstruir el datamart SQLite y el estado de meteorología. Luego se suscribe en vivo a ambos topics para mantener los datos actualizados. Expone una interfaz web en `http://127.0.0.1:8080`.
+5. El usuario abre el navegador, conecta Spotify (OAuth 2.0) y puede ver recomendaciones por clima y reproducirlas con un clic.
 
 ---
 
@@ -65,18 +76,39 @@ El sistema sigue una arquitectura **Lambda/Kappa**: los datos fluyen desde los f
 
 ```
 music-weather-recommender/
-├── lastfm-feeder/          # Sprint 1 — feeder de canciones (Java)
-├── event-store-builder/    # Sprint 2 — almacén de eventos (Java)
-├── weather-feeder/         # Sprint 2 — feeder meteorológico (Python)
-├── business-unit/          # Sprint 3 — unidad de negocio y CLI (Java)
-├── eventstore/             # Datos generados: eventos en NDJSON
+├── lastfm-feeder/               # Sprint 1 — feeder de canciones (Java)
+│   └── src/main/java/…/
+│       ├── model/               # Tag, Track, TrackEvent
+│       └── controller/          # Controller, LastFmApiFeeder, JmsTrackPublisher, serializers
+├── event-store-builder/         # Sprint 2 — almacén de eventos (Java)
+│   └── src/main/java/…/
+│       └── controller/          # Controller, FileEventStore, JmsSubscriber
+├── weather-feeder/              # Sprint 2 — feeder meteorológico (Python)
+│   └── src/main/python/es/ulpgc/dacd/openweather/
+│       ├── model/               # Location, Weather
+│       └── controller/          # WeatherFeederController, OpenWeatherMapFeeder, publisher
+├── business-unit/               # Sprint 3 — unidad de negocio (Java + Python)
+│   ├── src/main/java/…/
+│   │   ├── model/               # MoodMapping, Tag, Track
+│   │   ├── controller/          # TrackDatamart, TrackRecommender, SpotifyExporter, …
+│   │   └── view/                # WebServer (Javalin :8080)
+│   ├── src/main/python/         # Python: datamart meteorológico + CLI
+│   │   ├── controller/          # WeatherDatamart, EventStoreReader, subscriber
+│   │   └── view/                # Cli
+│   └── src/main/resources/web/  # index.html, app.js (Spotify Web Playback SDK)
+├── eventstore/                  # Datos generados: eventos en NDJSON
 │   ├── Track/lastfm-feeder/
 │   └── Weather/OpenWeatherMap/
-├── pom.xml                 # POM raíz (multi-módulo Maven)
-├── run.sh                  # Script de arranque completo
-├── .env.example            # Plantilla de configuración
+├── pom.xml                      # POM raíz (multi-módulo Maven)
+├── run.sh                       # Script de arranque completo
+├── .env.example                 # Plantilla de configuración
 └── README.md
 ```
+
+Cada módulo sigue la separación **model / controller / view** (view solo en business-unit):
+- `model`: entidades de dominio sin dependencias externas.
+- `controller`: lógica de negocio, acceso a datos, suscripciones al broker.
+- `view`: interfaz con el usuario (web o CLI).
 
 ---
 
@@ -92,11 +124,18 @@ music-weather-recommender/
 - **Endpoint `weather` (current)**: condición meteorológica actual por coordenadas geográficas.
 - **Justificación**: API REST con tier gratuito generoso, cobertura global y campo `weather_main` con categorías discretas (Clear, Clouds, Rain, etc.) directamente mapeables a cuadrantes de ánimo.
 
+### Spotify API
+- **OAuth 2.0 Authorization Code Flow**: autenticación del usuario para obtener un token con scope `streaming` y `user-read-playback-state`.
+- **Endpoint `GET /v1/search`**: búsqueda de canciones por nombre y artista para obtener el URI de Spotify.
+- **Endpoint `PUT /v1/me/player`**: transferencia de reproducción al dispositivo del usuario.
+- **Endpoint `PUT /v1/me/player/play`**: inicio de reproducción de una pista concreta.
+- **Justificación**: Spotify Web Playback SDK permite reproducción en navegador sin aplicación nativa. La integración cierra el ciclo recomendación → reproducción directamente en la interfaz web.
+
 ---
 
 ## Estructura del datamart
 
-El datamart es una base de datos SQLite con dos tablas:
+El datamart principal es una base de datos SQLite con dos tablas:
 
 ```sql
 CREATE TABLE tracks (
@@ -119,6 +158,18 @@ CREATE TABLE track_tags (
 ```
 
 La unicidad `(name, artist)` garantiza que las actualizaciones de rank (al reejecutar el feeder) sobreescriban el registro anterior mediante `ON CONFLICT DO UPDATE`.
+
+El datamart meteorológico (Python/SQLite) mantiene la última lectura por ciudad:
+
+```sql
+CREATE TABLE weather (
+    location_name TEXT PRIMARY KEY,
+    country TEXT, lat REAL, lon REAL,
+    temperature REAL, feels_like REAL, humidity INTEGER,
+    weather_main TEXT, weather_description TEXT,
+    wind_speed REAL, ts TEXT
+);
+```
 
 ### Muestra del event store — Track
 
@@ -144,41 +195,6 @@ El datamart contiene actualmente **460 canciones** con **3070 etiquetas** de gé
 
 ---
 
-## Archivos de configuración
-
-| Fichero | Módulo | Descripción |
-|---|---|---|
-| `pom.xml` (raíz) | todos | POM multi-módulo Maven; declara los submódulos y la versión de Java (21) |
-| `lastfm-feeder/pom.xml` | lastfm-feeder | Dependencias: Gson, ActiveMQ client |
-| `event-store-builder/pom.xml` | event-store-builder | Dependencias: Gson, ActiveMQ client |
-| `business-unit/pom.xml` | business-unit | Dependencias: Gson, ActiveMQ client, SQLite JDBC |
-| `.env` | todos | Variables de entorno: claves de API, rutas, URL del broker (no commiteado) |
-| `.env.example` | todos | Plantilla pública del fichero `.env` |
-| `weather-feeder/locations.json` | weather-feeder | Lista de ciudades (nombre + coordenadas) a monitorizar |
-
-### `.env.example`
-
-```env
-LASTFM_API_KEY=your_lastfm_api_key_here
-LASTFM_COUNTRY=spain
-BROKER_URL=tcp://localhost:61616
-EVENTSTORE_PATH=./eventstore
-DATAMART_PATH=./datamart.db
-OPENWEATHER_API_KEY=your_openweathermap_api_key_here
-WEATHER_DB_PATH=./weather.db
-```
-
-### `weather-feeder/locations.json`
-
-```json
-[
-  { "name": "Las Palmas de Gran Canaria", "lat": 28.1, "lon": -15.4 },
-  { "name": "Santa Cruz de Tenerife",     "lat": 28.5, "lon": -16.3 }
-]
-```
-
----
-
 ## Requisitos previos
 
 | Herramienta | Versión mínima |
@@ -189,6 +205,7 @@ WEATHER_DB_PATH=./weather.db
 | Apache ActiveMQ Classic | 5.x |
 | stomp.py (Python) | cualquiera |
 | requests (Python) | cualquiera |
+| Cuenta Spotify Premium | (para reproducción web) |
 
 Instalar dependencias Python:
 
@@ -213,10 +230,17 @@ BROKER_URL=tcp://localhost:61616
 EVENTSTORE_PATH=./eventstore
 DATAMART_PATH=./datamart.db
 OPENWEATHER_API_KEY=tu_clave_openweathermap
-WEATHER_DB_PATH=./weather.db
+SPOTIFY_CLIENT_ID=tu_spotify_client_id
+SPOTIFY_CLIENT_SECRET=tu_spotify_client_secret
 ```
 
 > El fichero `.env` nunca debe commitearse. Está incluido en `.gitignore`.
+
+### Configuración de la app Spotify
+
+1. Acceder a [Spotify Developer Dashboard](https://developer.spotify.com/dashboard).
+2. Crear una app y añadir como Redirect URI: `http://127.0.0.1:8080/callback`.
+3. Copiar el Client ID y Client Secret al `.env`.
 
 ---
 
@@ -242,7 +266,7 @@ Arranca todos los módulos en el orden correcto:
 ./run.sh
 ```
 
-El script compila, lanza `event-store-builder`, `lastfm-feeder` y `weather-feeder` en segundo plano, y finalmente abre la CLI interactiva de `business-unit`. Al cerrar la CLI (opción `0`), los procesos de fondo se detienen automáticamente.
+El script compila, lanza `event-store-builder`, `lastfm-feeder` y `weather-feeder` en segundo plano, y finalmente inicia `business-unit` con el servidor web en `http://127.0.0.1:8080`. Al cerrar con `Ctrl+C`, los procesos de fondo se detienen automáticamente.
 
 ### Opción B — Manual (módulo a módulo)
 
@@ -256,59 +280,58 @@ java -jar event-store-builder/target/event-store-builder-1.0-SNAPSHOT.jar \
 
 **3. lastfm-feeder**
 ```bash
-java -jar lastfm-feeder/target/lastfm-feeder-1.0-SNAPSHOT.jar \
+java --enable-native-access=ALL-UNNAMED \
+  -jar lastfm-feeder/target/lastfm-feeder-1.0-SNAPSHOT.jar \
   <LASTFM_API_KEY> spain tcp://localhost:61616
 ```
 
 **4. weather-feeder**
 ```bash
 cd weather-feeder
-PYTHONPATH=. python3 src/main.py <OPENWEATHER_API_KEY> ../weather.db 1
+PYTHONPATH=src/main/python python3 -m es.ulpgc.dacd.openweather.main \
+  <OPENWEATHER_API_KEY> 1
 ```
-El tercer argumento es el intervalo en horas (por defecto 1).
+El segundo argumento es el intervalo de consulta en horas.
 
 **5. business-unit**
 ```bash
-java -jar business-unit/target/business-unit-1.0-SNAPSHOT.jar \
+java --enable-native-access=ALL-UNNAMED \
+  -Dspotify.client.id=<CLIENT_ID> \
+  -Dspotify.client.secret=<CLIENT_SECRET> \
+  -jar business-unit/target/business-unit-1.0-SNAPSHOT.jar \
   tcp://localhost:61616 ./eventstore ./datamart.db
+```
+
+Si no se pasan las propiedades de Spotify, el sistema arranca sin reproducción (modo solo recomendaciones).
+
+**6. business-unit Python (datamart meteorológico)**
+```bash
+cd business-unit/src/main/python
+python3 main.py ../../../../../../weather.db ../../../../../../eventstore
 ```
 
 ---
 
-## Ejemplo de uso — CLI
+## Ejemplo de uso — Interfaz web
 
-```
-╔══════════════════════════════════════╗
-║     Music Weather Recommender        ║
-╚══════════════════════════════════════╝
+Abrir `http://127.0.0.1:8080` en el navegador:
 
-Select a weather condition:
-  1. Clear         →  Happy (Q1)
-  2. Clouds        →  Relaxed (Q4)
-  3. Rain          →  Sad (Q3)
-  4. Drizzle       →  Sad (Q3)
-  5. Snow          →  Sad (Q3)
-  6. Thunderstorm  →  Angry (Q2)
-  7. Fog           →  Sad (Q3)
-  8. Mist          →  Sad (Q3)
+1. Pulsar **Connect Spotify** para autorizar la cuenta (se abrirá el flujo OAuth). Tras la autorización se redirige de vuelta automáticamente.
+2. Seleccionar una condición meteorológica (o usar la detección automática por ciudad).
+3. El sistema muestra el ranking de canciones recomendadas para ese clima.
+4. Pulsar **▶ Play** en cualquier canción para reproducirla en el dispositivo Spotify activo.
 
-  Live weather:
-  9. Las Palmas de Gran Canaria        →  Clouds
-  10. Santa Cruz de Tenerife           →  Clear
-  11. Arrecife                         →  Clouds
-  0. Exit
+![Interfaz web](docs/screenshot.png)
 
-Option: 1
+### API REST (endpoints disponibles)
 
-Weather: Clear  →  Mood: Happy (Q1)
-──────────────────────────────────────────────────
-   1. Billie Jean — Michael Jackson
-   2. drop dead — Olivia Rodrigo
-   3. Flowers — Miley Cyrus
-   ...
-
-  Showing 10 track(s).
-```
+| Método | Ruta | Descripción |
+|---|---|---|
+| `GET` | `/` | Interfaz web principal |
+| `GET` | `/api/token` | Estado de autenticación Spotify (`200` autenticado, `401` no autenticado) |
+| `GET` | `/callback` | Callback OAuth 2.0 de Spotify |
+| `GET` | `/api/search?name=…&artist=…` | Busca una canción en Spotify; devuelve `{"uri":"spotify:track:…"}` |
+| `POST` | `/api/play` | Reproduce una canción; body `{"deviceId":"…","uri":"spotify:track:…"}` |
 
 ---
 
@@ -316,9 +339,9 @@ Weather: Clear  →  Mood: Happy (Q1)
 
 ### Principios SOLID
 
-- **SRP (Single Responsibility)**: cada clase tiene una única responsabilidad. `TrackDatamart` solo gestiona persistencia; `TrackRecommender` solo ejecuta la lógica de recomendación; `Cli` solo gestiona la interacción con el usuario.
+- **SRP (Single Responsibility)**: cada clase tiene una única responsabilidad. `TrackDatamart` solo gestiona persistencia; `TrackRecommender` solo ejecuta la lógica de recomendación; `WebServer` solo gestiona las rutas HTTP; `SpotifyExporter` solo gestiona la comunicación con la API de Spotify.
 - **OCP (Open/Closed)**: la interfaz `EventHandler` permite añadir nuevos tipos de eventos sin modificar `EventStoreReader` ni el `Controller`.
-- **DIP (Dependency Inversion)**: `Controller` depende de las abstracciones `LastFmFeeder` y `TrackSerializer`, no de sus implementaciones concretas.
+- **DIP (Dependency Inversion)**: `Controller` depende de las abstracciones `LastFmFeeder` y `TrackSerializer`, no de sus implementaciones concretas. `WebServer` recibe `SpotifyExporter` por constructor y puede recibir `null` si Spotify no está configurado.
 
 ### Patrones de diseño
 
@@ -326,40 +349,233 @@ Weather: Clear  →  Mood: Happy (Q1)
 - **Observer**: el `MessageListener` de JMS implementa el patrón observador — el broker notifica a los suscriptores cuando llega un evento.
 - **Repository**: `TrackDatamart` encapsula todo el acceso a SQLite y expone métodos de dominio (`save`, `findByTag`).
 - **Template Method** (implícito): `LastFmFeeder` define el contrato `feed()` que `LastFmApiFeeder` implementa.
+- **Proxy**: `WebServer` actúa como proxy entre el navegador y la API de Spotify. Todas las llamadas a `api.spotify.com` pasan por el servidor Java, que inyecta el token OAuth. Esto resuelve el bloqueo CORS de Safari y mantiene las credenciales fuera del cliente.
 
 ### Clean Code
 
 - Nombres expresivos y sin abreviaciones.
-- Logging mediante `java.util.logging.Logger` (nivel `SEVERE` para errores de infraestructura).
+- Logging mediante `java.util.logging.Logger` (nivel `WARNING` para errores de infraestructura).
 - Sin comentarios redundantes; el código se autodocumenta.
 - Métodos cortos con una sola responsabilidad.
 
 ---
 
-## Diagrama de clases — business-unit
+## Diagrama de clases
 
-```
-BusinessUnitMain
-    │
-    ├── Controller
-    │       ├── JmsSubscriber (Track)  ──▶ TrackEventHandler ──▶ TrackDatamart
-    │       ├── JmsSubscriber (Weather)──▶ WeatherEventHandler──▶ WeatherState
-    │       └── EventStoreReader (carga histórica)
-    │
-    └── Cli
-            ├── TrackRecommender ──▶ TrackDatamart
-            │       └── MoodMapper
-            └── WeatherState
+El diagrama se divide en tres bloques siguiendo la separación lógica de la arquitectura Lambda implementada: los **productores** generan y publican eventos, el **event store builder** los persiste de forma inmutable conformando el Data Lake, y la **business unit** los consume y transforma en información útil para el usuario.
+
+### Productores de datos
+Muestra los dos módulos encargados de la extracción y publicación hacia el broker. El `weather-feeder` (Python) consulta la API de OpenWeatherMap, mientras que el `lastfm-feeder` (Java) obtiene canciones de Last.fm. Ambos siguen el patrón feeder → publisher → controller.
+
+```mermaid
+classDiagram
+    class Location {
+        +str name
+        +float lat
+        +float lon
+        +str country
+    }
+    class Weather {
+        +Location location
+        +float temperature
+        +int humidity
+        +str weather_main
+        +datetime captured_at
+    }
+    class WeatherFeeder {
+        <<interface>>
+        +feed()
+    }
+    class OpenWeatherMapFeeder {
+        -str api_key
+        -list locations
+        +feed()
+    }
+    class WeatherPublisher {
+        <<interface>>
+        +publish(weather)
+        +connect()
+    }
+    class ActiveMQWeatherPublisher {
+        -str host
+        -int port
+        -str topic
+        +publish(weather)
+        +connect()
+    }
+    class WeatherFeederController {
+        -feeder
+        -publisher
+        +start()
+        +run()
+    }
+    class Tag {
+        +String name
+        +int count
+    }
+    class Track {
+        +String name
+        +String artist
+        +int rank
+        +List tags
+    }
+    class TrackEvent {
+        +String ts
+        +String ss
+        +String name
+        +String artist
+    }
+    class LastFmFeeder {
+        <<interface>>
+        +feed() List
+    }
+    class LastFmApiFeeder {
+        -String apiKey
+        +feed() List
+    }
+    class JmsTrackPublisher {
+        -Session session
+        +serialize(track)
+    }
+    class LastFmController {
+        -LastFmFeeder feeder
+        +start()
+    }
+
+    OpenWeatherMapFeeder --|> WeatherFeeder
+    ActiveMQWeatherPublisher --|> WeatherPublisher
+    LastFmApiFeeder --|> LastFmFeeder
+    WeatherFeederController --> WeatherFeeder
+    WeatherFeederController --> WeatherPublisher
+    OpenWeatherMapFeeder --> Weather
+    Weather --> Location
+    TrackEvent --> Tag
+    Track --> Tag
+    LastFmController --> LastFmFeeder
+    LastFmController --> JmsTrackPublisher
 ```
 
-## Diagrama de clases — lastfm-feeder
+### Event Store Builder
+Módulo responsable de la persistencia inmutable del sistema. Suscribe todos los topics de ActiveMQ y escribe cada evento en ficheros `.events` organizados por topic, fuente y fecha.
 
+```mermaid
+classDiagram
+    class FileEventStore {
+        -String basePath
+        +save(topic, json)
+    }
+    class ESBJmsSubscriber {
+        -String topicName
+        -FileEventStore store
+        +start(session)
+    }
+    class ESBController {
+        -String brokerUrl
+        +start()
+    }
+
+    ESBJmsSubscriber --> FileEventStore
+    ESBController --> ESBJmsSubscriber
 ```
-LastFmFeederMain
-    └── Controller
-            ├── LastFmApiFeeder (impl. LastFmFeeder)
-            └── JmsTrackPublisher (impl. TrackSerializer)
-                    └── GsonTrackEventSerializer (impl. TrackEventSerializer)
+
+### Business Unit
+Capa de consumo y presentación. Persiste los eventos en dos datamarts especializados — uno en Java para recomendaciones musicales y otro en Python para datos meteorológicos — y expone una interfaz web en Javalin con integración Spotify.
+
+```mermaid
+classDiagram
+    class EventHandler {
+        <<interface>>
+        +handle(json)
+    }
+    class TrackEventHandler {
+        -TrackDatamart datamart
+        +handle(json)
+    }
+    class WeatherEventHandler {
+        -WeatherState weatherState
+        +handle(json)
+    }
+    class WeatherState {
+        -Map latestByLocation
+        +update(location, weatherMain)
+        +getAll() Map
+    }
+    class TrackDatamart {
+        -String dbPath
+        +save(track)
+        +findByTag(tag) List
+    }
+    class MoodMapping {
+        +moodName(weatherMain) String
+        +tagsFor(weatherMain) List
+    }
+    class TrackRecommender {
+        -TrackDatamart datamart
+        +recommend(weatherMain) List
+    }
+    class SpotifyExporter {
+        -String clientId
+        -String clientSecret
+        -String accessToken
+        +authorize(code)
+        +searchTrack(name, artist) String
+        +playTrack(deviceId, uri)
+    }
+    class WebServer {
+        -TrackDatamart datamart
+        -WeatherState weatherState
+        -SpotifyExporter spotify
+        +start()
+    }
+    class BUJmsSubscriber {
+        -String topicName
+        -EventHandler handler
+        +start(session)
+    }
+    class BUController {
+        -String brokerUrl
+        +start()
+    }
+    class WeatherSubscriber {
+        <<interface>>
+        +start()
+        +stop()
+    }
+    class ActiveMQWeatherSubscriber {
+        -str host
+        -str topic
+        +start()
+        +stop()
+    }
+    class WeatherDatamart {
+        -str db_path
+        +save(event)
+        +get_all_latest() list
+        +get_latest_by_location(name) dict
+    }
+    class PythonEventStoreReader {
+        -str event_store_path
+        +load(topic, handler)
+    }
+    class PythonCli {
+        -WeatherDatamart datamart
+        +start()
+    }
+
+    TrackEventHandler --|> EventHandler
+    WeatherEventHandler --|> EventHandler
+    ActiveMQWeatherSubscriber --|> WeatherSubscriber
+    TrackEventHandler --> TrackDatamart
+    WeatherEventHandler --> WeatherState
+    TrackRecommender --> TrackDatamart
+    TrackRecommender --> MoodMapping
+    BUJmsSubscriber --> EventHandler
+    WebServer --> TrackRecommender
+    WebServer --> WeatherState
+    WebServer --> SpotifyExporter
+    BUController --> BUJmsSubscriber
+    ActiveMQWeatherSubscriber --> WeatherDatamart
+    PythonCli --> WeatherDatamart
 ```
 
 ---
